Add routing and new components

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -13,6 +13,7 @@
 
 .container {
   max-width: 100%;
+  height: 100%;
   background-color: #969191;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
 }
