--- a/src/components/MovieDetails/MovieDetails.module.scss
+++ b/src/components/MovieDetails/MovieDetails.module.scss
@@ -1,16 +1,23 @@
 .container {
+  position: relative;
   margin: 10%;
   padding: 5%;
   max-width: 80vw;
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
+  flex-direction: column;
   justify-content:stretch;
   background-color: #eee;
   border: 2px solid black;
 }
 
+.movieDetails {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
 .backgroundImage {
+  display: inline-block;
   width: 30%;
   height: 250px;
   background-size: cover;
@@ -18,6 +25,7 @@
 }
 
 .text {
+  display: inline-block;
   width: 70%;
   padding-left: 2%;
 
@@ -40,4 +48,20 @@
     font-size: 1em;
     min-height: 90px;
   }
+}
+
+.button {
+  float: right;
+  padding: 7px 8px;
+  font-family: 'Exo 2', sans-serif;
+  font-size: 1em;
+  color: #000;
+  box-shadow: 3px 3px #000;
+  cursor: pointer;
+  background-color: transparent;
+  border: 2px solid black;
+    &:hover {
+      background-color: #000;
+      color: #fff
+    }
 }
