App integrated with API

--- a/src/components/BookedMovie/BookedMovie.module.scss
+++ b/src/components/BookedMovie/BookedMovie.module.scss
@@ -50,9 +50,15 @@
   }
 }
 
+.booking p {
+  font-weight: bold;
+  margin-left: 35%;
+}
+
 .icon {
   margin-left: 90%;
   height: 40px;
   width: 40px;
   cursor: pointer;
 }
+
