--- a/src/components/ShowTimes/ShowTimes.module.scss
+++ b/src/components/ShowTimes/ShowTimes.module.scss
@@ -1,34 +1,11 @@
 .container {
 	display: flex;
-	width: 50%;
+	flex-direction: column;
+	width: 18%;
 }
 
-h4 {
-	font-weight: normal;
+label {
+	font-weight: bold;
 	margin: 0;
 	padding-right: 2%;
-}
-
-.show {
-	border: 2px solid black;
-	width: 70px;
-	height: 50px;
-	padding:10px;
-}
-
-.show + .show {
-	border-left: none;
-}
-
-.show:hover {
-	cursor: pointer;
-	background-color: #f2b600;
-}
-
-.showPicked {
-	border: 2px solid black;
-	width: 70px;
-	height: 50px;
-	padding:10px;
-	background-color: #f2b600;
 }
