Add animation on nav hover

--- a/src/components/Movie/Movie.module.scss
+++ b/src/components/Movie/Movie.module.scss
@@ -44,6 +44,7 @@
   }
 
   p {
+    margin-bottom: 20px;
     color: rgba(0, 0, 0, 0.87);
     font-size: 1em;
     min-height: 90px;
@@ -54,6 +55,7 @@
     .button {
       float: right;
       padding: 7px 8px;
+      margin-bottom: 10px;
       font-family: 'Exo 2', sans-serif;
       font-size: 1em;
       color: #000;
