--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -9,21 +9,6 @@
 	}
 }
 
-// .navElement {
-// 	text-decoration: none;
-// 	color: #000;
-// 	font-size: 1.5rem;
-
-// 	&:hover {
-// 		text-decoration: underline;
-// 	}
-// }
-
-.active {
-	font-size: 2rem;
-	text-decoration: underline;
-}
-
 .navElement {
 	text-decoration: none;
 	position: relative;
@@ -42,6 +27,10 @@
 	}
 
 	&:hover:after {
+		width: 100%;
+	}
+
+	&.active:after {
 		width: 100%;
 	}
 }
